re PR c++/19634 (Infinite memory usage on Alpha)

PR c++/19632
        * pt.c (get_mostly_instantiated_function_type): Save and restore
        flag_access_control instead of push/pop_access_scope.

From-SVN: r94889